# MAGenerator

./: .gitignore  AGENTS.md  README.md  SUMMARY.txt  main.py  pyproject.toml
NusaSynth/: 2702750546_Michael Geraldin Wijaya_FM-BINUS-AA-FPU-2.312R3 Pengajuan Judul Tesis Dan Dosen Pembimbing-FIN 15 Agt 23.docx  OUTLINE_.docx  Outline_Thesis_Master_NusaSynth_Michael Geraldin Wijaya_2702750546.docx  config.py  evaluation_checklist.md  evaluation_strategy.md  graph.py  lv_graph.py  nodes.py  prompts.py  run_pipeline.py  state.py  sv_graph.py  task_breakdown.md  tools.py  usage_tracker.py  ~$aft_Outline_Thesis_Master_NusaSynth_Michael Geraldin Wijaya_2702750546.docx  ~WRL1956.tmp
notebook/: bab_iv_metrics.ipynb  diversity_eval.ipynb  eval.ipynb  exp.ipynb  finetune_nusabert copy 4.ipynb  finetune_nusabert copy.ipynb  finetune_nusabert.ipynb  finetune_xlmr_analysis.ipynb  jaccard_threshold_analysis.ipynb  length_stratified_sampling.ipynb  main.ipynb  post_run_check.ipynb  test.json
scripts/: champion_finetune_nusabert_base_lp_ft_lora_lr1e4_drop25_wd01.py  champion_finetune_nusabert_large_lp_ft_lora_alllayer_lr5e5_drop25.py  dataset_relationship_analysis.py  distinct_n_analysis.py  filter_analysis.py  finetune_nusabert.py  finetune_nusabert_base.py  finetune_nusabert_clf_only.py  finetune_nusabert_large.py  finetune_nusabert_large_lp_ft.py  finetune_nusabert_large_top4.py  finetune_nusabert_lp_ft.py  finetune_nusabert_top4.py  finetune_xlmr.py  make_ratio_variants.py  p0_aggregate.py  p0_champion_multiseed.py  p0_ft_multiseed.py  run_p0.py  test_agent_manual.py
(+82 files in other folders)
