[project]
name = "magenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "evaluate>=0.4.6",
    "fasttext-wheel>=0.9.2",
    "google-adk>=1.29.0",
    "hf-dataset-selector>=0.2.1",
    "huggingface-hub>=1.9.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "transformers>=5.5.3",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
